--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -35,5 +35,14 @@
         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
+
+    <!-- tells browsers and screen readers that this contains the main part of the website -->
+    <main>
+      <section class="section-about">
+        <h2 class="heading-secondary">
+          Exciting tours for adventurous people
+        </h2>
+      </section>
+    </main>
   </body>
 </html>
