--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -44,6 +44,10 @@
             Exciting tours for adventurous people
           </h2>
         </div>
+        <div class="row">
+          <div class="col-1-of-2">Text content</div>
+          <div class="col-1-of-2">Images  </div>
+        </div>
       </section>
     </main>
   </body>
