--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -39,7 +39,7 @@
     <!-- tells browsers and screen readers that this contains the main part of the website -->
     <main>
       <section class="section-about">
-        <div class="u-center-text">
+        <div class="u-center-text u-margin-bottom-8">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
           </h2>
