--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -39,14 +39,33 @@
     <!-- tells browsers and screen readers that this contains the main part of the website -->
     <main>
       <section class="section-about">
-        <div class="u-center-text u-margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
           </h2>
         </div>
         <div class="row">
-          <div class="col-1-of-2">Text content</div>
-          <div class="col-1-of-2">Images  </div>
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+              expedita nesciunt eligendi dolor sint suscipit? Dicta eum ducimus
+              accusantium aspernatur perspiciatis veritatis? Autem nemo, illum
+              pariatur non enim a unde!
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+              expedita nesciunt eligendi dolor sint suscipit? Dicta eum ducimus
+              accusantium aspernatur perspiciatis veritatis? Autem nemo, illum
+              pariatur non enim a unde!
+            </p>
+          </div>
+          <div class="col-1-of-2">Images</div>
         </div>
       </section>
     </main>
