--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -61,9 +61,12 @@
             <p class="paragraph">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
               expedita nesciunt eligendi dolor sint suscipit? Dicta eum ducimus
-              accusantium aspernatur perspiciatis veritatis? Autem nemo, illum
-              pariatur non enim a unde!
+              accusantium aspernatur?
             </p>
+            <a href="#" class="btn-text">
+              <!-- &rarr; right arrow, HTML special symbol -->
+              Learn more &rarr; 
+            </a>
           </div>
           <div class="col-1-of-2">Images</div>
         </div>
