Add styling to feature box

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -91,6 +91,24 @@
           </div>
         </div>
       </section>
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the world
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Excepturi optio, tempora debitis pariatur sequi saepe fugit
+                aliquid voluptatibus rerum a eum dignissimos facilis,
+                consequuntur eligendi laboriosam aut ducimus illum corrupti?
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
