--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -164,7 +164,7 @@
                     <li>3 day tour</li>
                     <li>Up to 30 people</li>
                     <li>2 tour guides</li>
-                    <li>Sleep in cozy hotels</li>
+                    <li>Sleep in provided tents</li>
                     <li>Difficulty: easy</li>
                   </ul>
                 </div>
@@ -226,8 +226,8 @@
                 <div class="card__details">
                   <ul>
                     <li>5 day tour</li>
-                    <li>Up to 15 people</li>
-                    <li>3 tour guides</li>
+                    <li>Up to 50 people</li>
+                    <li>9 tour guides</li>
                     <li>Sleep in cozy hotels</li>
                     <li>Difficulty: hard</li>
                   </ul>
