--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -251,6 +251,31 @@
           <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
+
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            We make people genuinely happy
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape"></figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
+                quod hic consectetur eligendi id rem dignissimos molestias?
+                Blanditiis reprehenderit quaerat ex accusantium nisi veritatis
+                impedit tempore debitis illum excepturi! Est?
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
