--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -267,6 +267,9 @@
                 src="img/nat-8.jpg"
                 alt="Person on a tour"
               />
+              <figcaption class="story__caption">
+                Mary Smith
+              </figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">
@@ -276,7 +279,7 @@
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
                 quod hic consectetur eligendi id rem dignissimos molestias?
                 Blanditiis reprehenderit quaerat ex accusantium nisi veritatis
-                impedit tempore debitis illum excepturi! Est?
+                impedit tempore debitis illum excepturi!
               </p>
             </div>
           </div>
