--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -284,6 +284,31 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                class="story__img"
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+              />
+              <figcaption class="story__caption">
+                Jack Wilson
+              </figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                WOW! My life is completely different now
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
+                quod hic consectetur eligendi id rem dignissimos molestias?
+                Blanditiis reprehenderit quaerat ex accusantium nisi veritatis
+                impedit tempore debitis illum excepturi!
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
