--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -308,6 +308,9 @@
               </p>
             </div>
           </div>
+          <div class="u-center-text u-margin-top-huge">
+            <a href="#" class="btn-text">Read all stories &rarr; </a>
+          </div>
         </div>
       </section>
     </main>
