Add basic styling to booking container

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -320,6 +320,20 @@
           </div>
         </div>
       </section>
+
+      <section class="section-book">
+        <form class="section__form">
+          <h1 class="section__form--title">Start booking now</h1>
+          <label for="">
+            <input type="text" placeholder="Full name" />
+          </label>
+          <label for="">
+            <input type="text" placeholder="Email address" />
+          </label>
+          <label for=""> <input type="radio" /> Small tour group </label>
+          <label for=""> <input type="radio" /> Large tour group </label>
+        </form>
+      </section>
     </main>
   </body>
 </html>
