--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -320,6 +320,13 @@
           </div>
         </div>
       </section>
+      <section class="section-book">
+        <div class="row">
+          <div class="book">
+              
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
