--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -322,9 +322,7 @@
       </section>
       <section class="section-book">
         <div class="row">
-          <div class="book">
-              
-          </div>
+          <div class="book"></div>
         </div>
       </section>
     </main>
