--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -358,8 +358,9 @@
                       id="small"
                       name="size"
                     />
-                    <label for="small" class="form__radio-label"
-                      >Small tour group</label
+                    <label for="small" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Small tour group</label
                     >
                   </div>
                   <div class="form__radio-group">
@@ -370,7 +371,8 @@
                       name="size"
                     />
                     <label for="large" class="form__radio-label"
-                      >Large tour group</label
+                      ><span class="form__radio-button"></span>Large tour
+                      group</label
                     >
                   </div>
                 </div>
