--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -385,5 +385,42 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo" />
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="" class="footer__link">Contact Us</a>
+              </li>
+              <li class="footer__item">
+                <a href="" class="footer__link">Careers</a>
+              </li>
+              <li class="footer__item">
+                <a href="" class="footer__link">Privacy</a>
+              </li>
+              <li class="footer__item">
+                <a href="" class="footer__link">Terms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+            maiores sed eligendi ipsa amet. Itaque, dignissimos perspiciatis
+            atque blanditiis natus tempora commodi provident nobis labore
+            dolorum nesciunt aperiam sequi inventore? Copyright &copy;
+            <a href="#" class="footer__link">Annie Giang</a>
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
