Create navigation structure

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -17,6 +17,27 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+    <div class="navigation">
+      <input class="navigation__checkbox" id="navi-toggle" type="checkbox" />
+      <label class="navigation__button" for="navi-toggle">三</label>
+      <div class="navigation__background">&nbsp;</div>
+      <nav class="nagivation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="" class="navigation__link">About Natours</a>
+          </li>
+          <li class="navigation__item">
+            <a href="" class="navigation__link">Your benefits</a>
+          </li>
+          <li class="navigation__item">
+            <a href="" class="navigation__link">Stories</a>
+          </li>
+          <li class="navigation__item">
+            <a href="" class="navigation__link">Book now</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <header class="header">
       <div class="header__logo-box">
         <!-- wrap in div bc img by default are in-line -->
