--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -24,16 +24,16 @@
       <nav class="nagivation__nav">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="" class="navigation__link">About Natours</a>
+            <a href="#" class="navigation__link">About Natours</a>
           </li>
           <li class="navigation__item">
-            <a href="" class="navigation__link">Your benefits</a>
+            <a href="#" class="navigation__link">Your benefits</a>
           </li>
           <li class="navigation__item">
-            <a href="" class="navigation__link">Stories</a>
+            <a href="#" class="navigation__link">Stories</a>
           </li>
           <li class="navigation__item">
-            <a href="" class="navigation__link">Book now</a>
+            <a href="#" class="navigation__link">Book now</a>
           </li>
         </ul>
       </nav>
