--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -21,7 +21,7 @@
       <input class="navigation__checkbox" id="navi-toggle" type="checkbox" />
       <label class="navigation__button" for="navi-toggle">三</label>
       <div class="navigation__background">&nbsp;</div>
-      <nav class="nagivation__nav">
+      <nav class="navigation__nav">
         <ul class="navigation__list">
           <li class="navigation__item">
             <a href="#" class="navigation__link">About Natours</a>
