--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -24,19 +24,25 @@
       <nav class="navigation__nav">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="#" class="navigation__link">01 About Natours</a>
+            <a href="#" class="navigation__link"
+              ><span>01</span> About Natours</a
+            >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link">02 Your benefits</a>
+            <a href="#" class="navigation__link"
+              ><span>02</span> Your benefits</a
+            >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link">03 Popular tours</a>
+            <a href="#" class="navigation__link"
+              ><span>03</span> Popular tours</a
+            >
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link">04 Stories</a>
+            <a href="#" class="navigation__link"><span>04</span> Stories</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link">05 Book now</a>
+            <a href="#" class="navigation__link"><span>05</span> Book now</a>
           </li>
         </ul>
       </nav>
